// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Group> can change element type 1`] = `
<Group
  as="span"
  separator=" "
>
  <span />
</Group>
`;

exports[`<Group> can set custom separator 1`] = `
<Group
  as="div"
  separator={<br />}
>
  <div>
    <span
      key=".0"
    >
      Hello
    </span>
    <br />
    <span
      key=".1"
    >
      world
    </span>
  </div>
</Group>
`;

exports[`<Group> default separator is space 1`] = `
<Group
  as="div"
  separator=" "
>
  <div>
    <span
      key=".0"
    >
      Hello
    </span>
     
    <span
      key=".1"
    >
      world
    </span>
  </div>
</Group>
`;

exports[`<Group> passes through props 1`] = `
<Group
  as="div"
  className="foo"
  separator=" "
>
  <div
    className="foo"
  />
</Group>
`;

exports[`<Group> works with no children 1`] = `
<Group
  as="div"
  separator=" "
>
  <div />
</Group>
`;
